--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,10 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.6",
     "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
+    "jest": "^29.3.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
