--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,17 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.5.6",
-    "@strapi/plugin-users-permissions": "4.5.6",
+    "@strapi/plugin-graphql": "^4.5.6",
     "@strapi/plugin-i18n": "4.5.6",
+    "@strapi/plugin-users-permissions": "4.5.6",
+    "@strapi/strapi": "4.5.6",
     "better-sqlite3": "7.4.6"
   },
   "author": {
@@ -26,5 +27,9 @@
     "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "resolutions": {
+    "graphql": "15.5.0",
+    "**/graphql": "15.5.0"
+  }
 }
