--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.4",
+    "@mdx-js/react": "^2.2.1",
     "@next/font": "13.1.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -19,7 +21,9 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "eslint-config-prettier": "^8.6.0",
+    "graphql": "^16.6.0",
     "next": "13.1.2",
+    "next-mdx-remote": "^4.3.0",
     "prettier": "^2.8.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,6 +37,7 @@
     "autoprefixer": "^10.4.13",
     "jest": "^29.3.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.5"
   }
 }
