--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.13",
     "jest": "^29.3.1",
     "postcss": "^8.4.21",
+    "postcss-nesting": "^11.0.0",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5"
   }
