--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "axios": "^1.2.3",
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
@@ -27,13 +26,11 @@
     "prettier": "^2.8.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.0.1",
-    "typescript": "4.9.4",
-    "uuid": "^9.0.0"
+    "react-icons": "^4.7.1",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@types/jest": "^29.2.6",
-    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
     "jest": "^29.3.1",
     "postcss": "^8.4.21",
