--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.1.2",
     "eslint-config-prettier": "^8.6.0",
     "graphql": "^16.6.0",
+    "hamburger-react": "^2.5.0",
     "next": "13.1.2",
     "next-mdx-remote": "^4.3.0",
     "prettier": "^2.8.3",
