--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^8.6.0",
     "graphql": "^16.6.0",
     "hamburger-react": "^2.5.0",
+    "mock-apollo-client": "^1.2.1",
     "next": "13.1.2",
     "next-mdx-remote": "^4.3.0",
     "prettier": "^2.8.3",
