--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "next-mdx-remote": "^4.3.0",
     "prettier": "^2.8.3",
     "react": "18.2.0",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.4"
