--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-users-permissions": "4.5.6",
     "@strapi/strapi": "4.5.6",
     "better-sqlite3": "7.4.6",
+    "node-postgres": "^0.6.2",
     "pg": "^8.9.0"
   },
   "author": {
