--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-graphql": "^4.5.6",
     "@strapi/plugin-i18n": "4.5.6",
     "@strapi/plugin-users-permissions": "4.5.6",
+    "@strapi/provider-upload-cloudinary": "^4.6.0",
     "@strapi/strapi": "4.5.6",
     "better-sqlite3": "7.4.6",
     "node-postgres": "^0.6.2",
