node version update

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,7 @@
     "uuid": "8574c1b0-6a5a-49a4-808d-0a3933952f3e"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+     "node": "16.13.0",
     "npm": ">=6.0.0"
   },
   "license": "MIT",
